feat: 🎸 simple component system/ watch callback

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         ></todo-item>
       </ol>
     </div>
+    <div id="components-demo">
+      <button-counter></button-counter>
+    </div>
+    <div id="example" v-on:click="a+=1">{{a}}</div>
   </body>
   <script src="index.js"></script>
 </html>
