feat: 🎸 add watcher

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     </p>
 
     <p id="without-v-html">
-      Using v-html directive: <span v-html="data"></span></p>
+      Using v-html directive: <span v-html="data"></span>
     </p>
-
-    <p></p>
+    <div id="example-2">
+      <p>Original message: "{{ message }}"</p>
+      <p>Computed reversed message: "{{ lastName }}"</p>
+    </div>
   </body>
 
   <script src="index.js"></script>
