feat: 🎸 v-bind style

--- a/html/component.html
+++ b/html/component.html
@@ -55,6 +55,9 @@
 
       <component v-bind:is="currentTabComponent" class="tab"></component>
     </div>
+    <div id="style-object">
+      <div v-bind:style="styleObject">hi from styleObject</div>
+    </div>
   </body>
 
   <script src="../js/component.js"></script>
