--- a/html/component.html
+++ b/html/component.html
@@ -58,6 +58,9 @@
     <div id="style-object">
       <div v-bind:style="styleObject">hi from styleObject</div>
     </div>
+    <div id="next-tick-example">
+      {{ message }}
+    </div>
   </body>
 
   <script src="../js/component.js"></script>
