--- a/html/formInput.html
+++ b/html/formInput.html
@@ -42,6 +42,9 @@
       ></custom-input>
       {{searchText}}
     </div>
+    <div id="pass-prop-object">
+      <blog-post v-bind="post"></blog-post>
+    </div>
   </body>
 
   <script src="../js/formInput.js"></script>
