--- a/html/vuex.html
+++ b/html/vuex.html
@@ -7,13 +7,7 @@
     <script src="https://unpkg.com/vuex@3.5.1/dist/vuex.js"></script>
   </header>
   <body>
-    <div id="app">
-      <p>{{ count }}</p>
-      <p>
-        <button @click="increment">+</button>
-        <button @click="decrement">-</button>
-      </p>
-    </div>
+    <div id="app"></div>
   </body>
 
   <script src="../js/vuex.js"></script>
